# extract-audio-data-uris

./: README.md  extract-audio-data-uris.cabal
app/: Main.hs
src/Text/HTML/: AudioDataURIs.hs
test/Text/HTML/: AudioDataURIsSpec.hs
