name:                extract-audio-data-uris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/corajr/extract-audio-data-uris#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          me@corajr.com
copyright:           2017 Cora Johnson-Roberson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.HTML.AudioDataURIs
  build-depends:       base >= 4.7 && < 5
                     , tagsoup
                     , uniplate
                     , bytestring
                     , text
  default-language:    Haskell2010

executable extract-audio-data-uris
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , extract-audio-data-uris
  default-language:    Haskell2010

test-suite extract-audio-data-uris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , extract-audio-data-uris
                     , bytestring
                     , text
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/extract-audio-data-uris
